Bug 4130 - xconsole: non-ascii characters don't show up
Summary: xconsole: non-ascii characters don't show up
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/other (show other bugs)
Version: 6.8.2
Hardware: x86 (IA32) Linux (All)
: high minor
Assignee: Alan Coopersmith
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-08-17 13:46 UTC by Samuel Thibault
Modified: 2005-08-16 21:03 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Samuel Thibault 2005-08-17 13:46:22 UTC
Hi,

Some of my deamons print french information in syslog, so this produces
non-ascii characters like ιΰηθ. These don't show up in xconsole's
output, while running cat /dev/xconsole shows that xconsole really gets
them.

Just calling XtSetLanguageProc(NULL,NULL,NULL) before XtInitialize() makes
it work as expected:

--- xc/programs/xconsole/xconsole.c.orig	2005-08-17 22:44:32.604358319 +0200
+++ xc/programs/xconsole/xconsole.c	2005-08-17 22:42:22.481372313 +0200
@@ -599,6 +599,7 @@ main(int argc, char *argv[])
     Arg arglist[10];
     Cardinal num_args;
 
+    XtSetLanguageProc(NULL,NULL,NULL);
     top = XtInitialize ("xconsole", "XConsole", options, XtNumber (options),
 			&argc, argv);
     XtGetApplicationResources (top, (XtPointer)&app_resources, resources,

Regards,
Samuel
Comment 1 Alan Coopersmith 2005-08-17 14:00:57 UTC
Looks good - I'll take care of this.
Comment 2 Alan Coopersmith 2005-08-17 14:03:53 UTC
Fix committed to CVS head - should be included in Xorg 6.9 RC1 & 7.0 RC1.

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.