Bugzilla #4130 <https://bugs.freedesktop.org/show_bug.cgi?id=4130>     xconsole: non-ascii characters don't show up (Samuel Thibault)